[package]
name = "bpb_enhance"
version = "0.6.1"
edition = "2024"

[[bin]]
name = "bpb_enhance"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
binrw = "0.15.0"
gpui = "0.2.2"
gpui-component = "0.5.0"
md5 = "0.8.0"
multi_index_map = "0.15.0"
rfd = "0.14"
rust-embed = "8.9.0"
toml = "0.9.10"
