[package]
name = "bpb_enhance"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bpb_enhance"
path = "src/main.rs"

[features]
cli = ["clap"]
gui = ["gpui", "gpui-component", "rfd", "rust-embed"]

[dependencies]
anyhow = "1.0.100"
binrw = "0.15.0"
cfg-if = "1.0"
clap = { version = "4.4", optional = true, features = ["derive"] }
gpui = { version = "0.2.2", optional = true }
gpui-component = { version = "0.5.0", optional = true }
md5 = "0.8.0"
multi_index_map = "0.15.0"
rfd = { version = "0.14", optional = true }
rust-embed = { version = "8.9.0", optional = true }
toml = "0.9.10"
